cmake_minimum_required(VERSION 3.26)
project(AdventOfCode2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(AdventOfCode2023_cpp_day1_puzzle_1 cpp/day1/puzzle1/main.cpp)
add_executable(AdventOfCode2023_cpp_day1_puzzle_2 cpp/day1/puzzle2/main.cpp)
add_executable(AdventOfCode2023_cpp_day2_puzzle_1 cpp/day2/puzzle1/main.cpp)
add_executable(AdventOfCode2023_cpp_day2_puzzle_2 cpp/day2/puzzle2/main.cpp)
